--- a/app/views/index.html
+++ b/app/views/index.html
@@ -34,7 +34,7 @@
                                 
                 <form action="/service-start" method="post" >                    
                     {{ govukButton({
-                        text: "Service start page"
+                        text: "Service login"
                     }) }}
                 </form> 
                 
