--- a/app/views/project/issues-risks/issues/index.html
+++ b/app/views/project/issues-risks/issues/index.html
@@ -35,7 +35,7 @@
 					}
 				},				
 				items: [
-				  { value: "yes", text: "Yes" },
+				  { value: "yes~/project/issues-risks/issues/add/", text: "Yes" },
 				  { value: "no", text: "No" }
 				]
 			  }) }}
