--- a/app/views/project/overview/challenges/index.html
+++ b/app/views/project/overview/challenges/index.html
@@ -22,7 +22,7 @@
 			<li>And lastly, you should include this</li>
 		</ul>
 
-		<form method="post" action="" >
+		<form method="post" action="/project/overview/challenges/add/" >
 		
 			{{ govukRadios({
 				classes: "govuk-radios--inline",
