--- a/app/views/project/overview/communications/index.html
+++ b/app/views/project/overview/communications/index.html
@@ -22,7 +22,7 @@
 			<li>And lastly, you should include this</li>
 		</ul>
 
-		<form method="post" action="/project/?report-2-status=Completed" >
+		<form method="post" action="/project/overview/communications/add/" >
 		
 			{{ govukRadios({
 				classes: "govuk-radios--inline",
@@ -39,6 +39,7 @@
 				  { value: "No~/project/?report-2-status=Completed", text: "No", checked: checked("projectCommunication", "No")  }
 				]
 			  }) }}
+
 
 
 			<div class="govuk-button-group">
