--- a/app/views/project/overview/challenges/index.html
+++ b/app/views/project/overview/challenges/index.html
@@ -2,8 +2,8 @@
 
 {% set showBackLink = true %}
 
-{% set pageHeading = "Project challenges" %}
-{% set pageSection = "Project overview" %}
+{% set pageHeading = "Do you need to add any project challenges?" %}
+{% set pageSection = "Project challenges" %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
 {% block content %}
@@ -32,7 +32,7 @@
 				  legend: {
 					text: "Do you need to add any project challenges?",
 					isPageHeading: false,
-					classes: "govuk-fieldset__legend--m"
+					classes: "govuk-fieldset__legend govuk-visually-hidden"
 					}
 				},				
 				items: [
@@ -44,14 +44,14 @@
 
 			<div class="govuk-button-group">
 				{{ govukButton({
-				  text: "Save"
+				  text: "Save and continue"
 				}) }}
 
-				{{ govukButton({
+				<!-- {{ govukButton({
 				  text: "Save as draft",
 				  classes: "govuk-button--secondary",
 				  href: "/project/?report-4-status=inProgress" 
-				}) }}
+				}) }} -->
 		  </div>
 
 
