--- a/app/views/project/issues-risks/risks/add/index.html
+++ b/app/views/project/issues-risks/risks/add/index.html
@@ -3,7 +3,7 @@
 {% set showBackLink = true %}
 
 {% set pageHeading = "Title of issue" %}
-{% set pageSection = "Project issues" %}
+{% set pageSection = "Project risks" %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
 {% block content %}
@@ -13,7 +13,7 @@
 
     	{{ macroPageHeader.pageHeader(pageHeading,pageSection) }}      
 	
-		<form method="post" action="/project/issues-risks/issues/add/impact" >
+		<form method="post" action="/project/issues-risks/risks/add/category" >
             
             {{ govukInput({
                 label: {
@@ -22,11 +22,11 @@
                   isPageHeading: false
                 },     
 				hint: {
-					text: "For example, Limited recruitment opportunities."
+					text: "For example, Planting more trees may be delayed."
 				},
                 classes: "govuk-!-width-two-thirds",           
-                id: "projectIssueTitle",
-                name: "projectIssueTitle"
+                id: "projectRiskTitle",
+                name: "projectRiskTitle"
             }) }}
 
 			<div class="govuk-button-group">
