--- a/app/views/project/overview/communications/add/more.html
+++ b/app/views/project/overview/communications/add/more.html
@@ -2,7 +2,7 @@
 
 {% set showBackLink = true %}
 
-{% set pageHeading = "Do you have any upcoming communications opportunities?" %}
+{% set pageHeading = "Do you want to add any further communications?" %}
 {% set pageSection = "Upcoming communications" %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
@@ -12,41 +12,31 @@
 	<div class="govuk-grid-column-two-thirds">
 
     	{{ macroPageHeader.pageHeader(pageHeading,pageSection) }}      
+	
 
-		<p>We need to know if you have any upcoming communications for your project Growing Community Green Spaces.</p>
-
-		
-		<ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-7">
-			<li>include this</li>
-			<li>Also include this</li>
-			<li>And lastly, you should include this</li>
-		</ul>
-
-		<form method="post" action="/project/overview/communications/add/" >
-		
-			{{ govukRadios({
+		<form method="post" action="/project/?report-2-status=Completed" >
+            
+      {{ govukRadios({
 				classes: "govuk-radios--inline",
-				name: "projectCommunication",							
+				name: "projectCommunicationAdd",							
 				fieldset: {
 				  legend: {
-					text: "Do you have any upcoming communications opportunities?",
+					text: "Do you want to add any further communications?",
 					isPageHeading: false,
 					classes: "govuk-fieldset__legend govuk-visually-hidden"
 					}
 				},				
 				items: [
-				  { value: "Yes", text: "Yes", checked: checked("projectCommunication", "Yes")  },
-				  { value: "No~/project/?report-2-status=Completed", text: "No", checked: checked("projectCommunication", "No")  }
+				  { value: "Yes~/project/overview/communications/add/", text: "Yes", checked: checked("projectCommunicationAdd", "Yes")  },
+				  { value: "No", text: "No", checked: checked("projectCommunicationAdd", "No")  }
 				]
 			  }) }}
-
-
+            
 
 			<div class="govuk-button-group">
 				{{ govukButton({
 				  text: "Continue"
 				}) }}
-
 				<!-- {{ govukButton({
 				  text: "Save as draft",
 				  classes: "govuk-button--secondary"
